--- a/trab/index.html
+++ b/trab/index.html
@@ -483,7 +483,13 @@
 <script src="js/jquery.vide.min.js"></script>
 <script src="js/jquery.shuffle-images.min.js"></script>
 <script src="js/shuffle-me.js"></script>
-    
+<script src="js/Gruntfile.js"></script>
+<script src="js/jquery.stellar.js"></script>
+<script src="js/jquery.stellar.min.js"></script>
+
+
+
+
 </body>
 
 </html>
