--- a/trab/index.html
+++ b/trab/index.html
@@ -287,7 +287,7 @@
         </div>
     </div>
     
-    <div class="container-fluid" id="parallax">
+    <div data-stellar-background-ratio="2" class="container-fluid" id="parallax">
         <h6 class="text-center py-6 mx-3">Temos atendimento e serviços de primeira linha!</h6>
     </div>
     
@@ -486,6 +486,7 @@
 <script src="js/Gruntfile.js"></script>
 <script src="js/jquery.stellar.js"></script>
 <script src="js/jquery.stellar.min.js"></script>
+<script src= "js/stellar.js"></script>
 
 
 
