--- a/trab/index.html
+++ b/trab/index.html
@@ -287,7 +287,7 @@
         </div>
     </div>
     
-    <div data-stellar-background-ratio="2" class="container-fluid" id="parallax">
+    <div class="container-fluid" id="parallax">
         <h6 class="text-center py-6 mx-3">Temos atendimento e serviços de primeira linha!</h6>
     </div>
     
@@ -483,10 +483,6 @@
 <script src="js/jquery.vide.min.js"></script>
 <script src="js/jquery.shuffle-images.min.js"></script>
 <script src="js/shuffle-me.js"></script>
-<script src="js/Gruntfile.js"></script>
-<script src="js/jquery.stellar.js"></script>
-<script src="js/jquery.stellar.min.js"></script>
-<script src= "js/stellar.js"></script>
 
 
 
